Tue Apr  5 13:01:08 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_iphone.GNU:

          Added new feature, iphone_codesign, to only use the iPhone codesign
          utility if explicitly set.  Recent changes in behavior have make this 
          problematic in automated builds. 

Tue Apr  5 12:36:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Get_Opt.inl:
        * ace/Guard_T.inl:
        * ace/Guard_T.cpp:
        * ace/Handle_Set.h:
        * ace/Handle_Set.cpp:
        * ace/Hash_Multi_Map_Manager_T.cpp:
        * ace/Hashable.inl:
        * ace/Hashable.cpp:
        * ace/IO_SAP.inl:
        * ace/IO_SAP.cpp:
          Layout changes

        * ace/Handle_Set.inl:
          Removed some old includes, should not be a problem with the current
          supported platforms

        * bin/vx_repo_link.pl:
          Removed this file, vxsim is not supported anymore

Mon Apr  4 09:42:27 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/rules.local.GNU:
        * include/makeinclude/wrapper_macros.GNU:
          Added support to build from symlinked project root.

Thu Mar 31 12:59:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          If CROSS_COMPILE is set, set CROSS-COMPILE to 1

Tue Mar 29 12:37:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/doxygen-convert-h.pl:
          Also convert idl files

        * apps/JAWS2/JAWS/Policy.h:
        * apps/JAWS2/JAWS/Reaper.h:
        * tests/Message_Queue_Test_Ex.cpp:
        * tests/Wild_Match_Test.cpp:
          Doxygen changes

Tue Mar 29 07:09:56 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/ClientRequestHandler.h:
        * protocols/ace/INet/HTTP_ClientRequestHandler.h:
        * protocols/ace/INet/URLBase.h:
          Made explicit export defs on nested classes default for all MSVC