@@ -1,10 +1,17 @@
+Tue Apr  5 14:27:40 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * protocols/ace/INet/ClientRequestHandler.h:
+        * protocols/ace/INet/HTTP_ClientRequestHandler.h:
+        * protocols/ace/INet/URLBase.h:
+          Fixes for MingW32 link problem.
+
 Tue Apr  5 13:01:08 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * include/makeinclude/platform_macosx_iphone.GNU:
 
           Added new feature, iphone_codesign, to only use the iPhone codesign
-          utility if explicitly set.  Recent changes in behavior have make this 
-          problematic in automated builds. 
+          utility if explicitly set.  Recent changes in behavior have make this
+          problematic in automated builds.
 
 Tue Apr  5 12:36:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
